Fixed code element overflow issue; Fixed headerImageCaption not appearing; minor style changes

--- a/components/BlogPost/styles.module.scss
+++ b/components/BlogPost/styles.module.scss
@@ -6,19 +6,43 @@
   pre {
     padding: calc(var(--padding) / 2);
     background-color: var(--code-background);
-    color: var(--code-text-color);
+    font-size: 0.8rem;
+    max-width: 720px;
+    margin: auto;
+    white-space: pre;
+    overflow: hidden;
 
     code {
       border: 8px solid var(--background);
       padding: var(--padding);
       display: block;
+      color: var(--code-text-color);
+      overflow: scroll;
     }
   }
 
-  blockquote {
-    background-color: var(--selection-background);
-    color: var(--selection-text);
-    padding: 8px;
+  figure:not(.headerImageFigure) {
+    padding: var(--padding) 64px;
+
+    blockquote {
+      &::before {
+        content: '“';
+      }
+
+      &::after {
+        content: '”';
+      }
+      background-color: var(--selection-background);
+      color: var(--selection-text);
+      margin: 0 0 var(--margin) 0;
+      padding-inline: 0;
+      display: inline;
+      line-height: 2;
+    }
+
+    figcaption {
+      text-align: right;
+    }
   }
 }
 
@@ -64,9 +88,22 @@
   }
 }
 
+.headerImageFigure {
+  padding: 0;
+  margin: 0;
+
+  figcaption {
+    font-size: 0.8rem;
+    color: var(--inactive-text);
+  }
+}
+
 .blogImageWrapper {
-  width: max-content;
+  width: 100%;
+  max-width: 720px;
   margin: auto;
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 490px) {
